docs/api/qiskit/0.29/qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.md
---
title: NumPyMinimumEigensolverFactory
description: API reference for qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory
---

# NumPyMinimumEigensolverFactory

<span id="qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory" />

`NumPyMinimumEigensolverFactory(filter_criterion=None, use_default_filter_criterion=False)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/ground_state_solvers/minimum_eigensolver_factories/numpy_minimum_eigensolver_factory.py "view source code")

Bases: `qiskit.chemistry.algorithms.ground_state_solvers.minimum_eigensolver_factories.minimum_eigensolver_factory.MinimumEigensolverFactory`

A factory to construct a NumPyMinimumEigensolver.

**Parameters**

*   **filter\_criterion** (`Optional`\[`Callable`\[\[`Union`\[`List`, `ndarray`], `float`, `Optional`\[`List`\[`float`]]], `bool`]]) – callable that allows to filter eigenvalues/eigenstates. The minimum eigensolver is only searching over feasible states and returns an eigenstate that has the smallest eigenvalue among feasible states. The callable has the signature filter(eigenstate, eigenvalue, aux\_values) and must return a boolean to indicate whether to consider this value or not. If there is no feasible element, the result can even be empty.
*   **use\_default\_filter\_criterion** (`bool`) – whether to use the transformation’s default filter criterion if `filter_criterion` is `None`.

## Methods

### get\_solver

<span id="qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.get_solver" />

`NumPyMinimumEigensolverFactory.get_solver(transformation)` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/ground_state_solvers/minimum_eigensolver_factories/numpy_minimum_eigensolver_factory.py "view source code")

Returns a NumPyMinimumEigensolver which possibly uses the default filter criterion provided by the `transformation`.

**Parameters**

**transformation** (`Transformation`) – a fermionic/bosonic qubit operator transformation.

**Return type**

`MinimumEigensolver`

**Returns**

A NumPyMinimumEigensolver suitable to compute the ground state of the molecule transformed by `transformation`.

### supports\_aux\_operators

<span id="qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.supports_aux_operators" />

`NumPyMinimumEigensolverFactory.supports_aux_operators()` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.9/qiskit/chemistry/algorithms/ground_state_solvers/minimum_eigensolver_factories/numpy_minimum_eigensolver_factory.py "view source code")

Returns whether the eigensolver generated by this factory supports auxiliary operators.

## Attributes

<span id="qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.filter_criterion" />

### filter\_criterion

returns filter criterion

**Return type**

`Callable`\[\[`Union`\[`List`, `ndarray`], `float`, `Optional`\[`List`\[`float`]]], `bool`]

<span id="qiskit.chemistry.algorithms.NumPyMinimumEigensolverFactory.use_default_filter_criterion" />

### use\_default\_filter\_criterion

returns whether to use the default filter criterion

**Return type**

`bool`

